@@ -1,6 +1,6 @@
-// RawTile class
+/// RawTile class
 
-/*  IIP Image Server
+/*  IIPImage Server
 
     Copyright (C) 2000-2022 Ruven Pillay.
 
@@ -33,7 +33,6 @@
 #endif
 
 
-
 /// Colour spaces - GREYSCALE, sRGB and CIELAB
 enum ColourSpaces { NONE, GREYSCALE, sRGB, CIELAB, BINARY };
 
@@ -44,46 +43,14 @@ enum CompressionType { UNCOMPRESSED, JPEG, DEFLATE, PNG, WEBP };
 enum SampleType { FIXEDPOINT, FLOATINGPOINT };
 
 
-/// Class to represent a single image tile
 
-class RawTile{
+/// Class to represent a single image tile
+class RawTile {
 
  public:
 
-  /// The tile number for this tile
-  int tileNum;
-
-  /// The resolution to which this tile belongs
-  int resolution;
-
-  /// The horizontal angle to which this tile belongs
-  int hSequence;
-
-  /// The vertical angle to which this tile belongs
-  int vSequence;
-
-  /// Compression type
-  CompressionType compressionType;
-
-  /// Compression rate or quality
-  int quality;
-
   /// Name of the file from which this tile comes
   std::string filename;
-
-  /// Tile timestamp
-  time_t timestamp;
-
-  /// Pointer to the image data
-  void *data;
-
-  /// This tracks whether we have allocated memory locally for data
-  /// or whether it is simply a pointer
-  /** This is used in the destructor to make sure we deallocate correctly */
-  int memoryManaged;
-
-  /// The size of the data pointed to by data
-  uint32_t dataLength;
 
   /// The width in pixels of this tile
   unsigned int width;
@@ -100,8 +67,43 @@ class RawTile{
   /// Sample format type (fixed or floating point)
   SampleType sampleType;
 
-  /// Padded
+  /// Compression type
+  CompressionType compressionType;
+
+  /// Compression rate or quality
+  int quality;
+
+  /// Tile timestamp
+  time_t timestamp;
+
+  /// The tile number for this tile
+  int tileNum;
+
+  /// The resolution number to which this tile belongs
+  int resolution;
+
+  /// The horizontal angle to which this tile belongs
+  int hSequence;
+
+  /// The vertical angle to which this tile belongs
+  int vSequence;
+
+  /// Wehther image is padded
   bool padded;
+
+  /// Amount of memory actually allocated in bytes
+  uint32_t capacity;
+
+  /// The size of the data pointed to by the data pointer in bytes
+  uint32_t dataLength;
+
+  /// This tracks whether we have allocated memory locally for data
+  /// or whether it is simply a pointer
+  /** This is used in the destructor to make sure we deallocate correctly */
+  int memoryManaged;
+
+  /// Pointer to the image data
+  void *data;
 
 
   /// Main constructor
@@ -115,117 +117,140 @@ class RawTile{
       @param b bits per channel per sample
   */
   RawTile( int tn = 0, int res = 0, int hs = 0, int vs = 0,
-	   int w = 0, int h = 0, int c = 0, int b = 0 ) {
-    width = w; height = h; bpc = b; dataLength = 0; data = NULL;
-    tileNum = tn; resolution = res; hSequence = hs ; vSequence = vs;
-    memoryManaged = 1; channels = c; compressionType = UNCOMPRESSED; quality = 0;
-    timestamp = 0; sampleType = FIXEDPOINT; padded = false;
-  };
+	   int w = 0, int h = 0, int c = 0, int b = 0 )
+    : width( w ),
+      height( h ),
+      channels( c ),
+      bpc( b ),
+      sampleType( FIXEDPOINT ),
+      compressionType( UNCOMPRESSED ),
+      quality( 0 ),
+      timestamp( 0 ),
+      tileNum( tn ),
+      resolution( res ),
+      hSequence( hs ),
+      vSequence( vs ),
+      padded( false ),
+      capacity( 0 ),
+      dataLength( 0 ),
+      memoryManaged( 1 ),
+      data( NULL ) {};
+
 
 
   /// Destructor to free the data array if is has previously be allocated locally
   ~RawTile() {
     if( data && memoryManaged ){
       switch( bpc ){
-      case 32:
-        if( sampleType == FLOATINGPOINT ) delete[] (float*) data;
-        else delete[] (unsigned int*) data;
-        break;
-      case 16:
-	delete[] (unsigned short*) data;
-        break;
-      default:
-	delete[] (unsigned char*) data;
-        break;
+        case 32:
+	  if( sampleType == FLOATINGPOINT ) delete[] (float*) data;
+	  else delete[] (unsigned int*) data;
+	  break;
+        case 16:
+	  delete[] (unsigned short*) data;
+	  break;
+        default:
+	  delete[] (unsigned char*) data;
+	  break;
       }
+      data = NULL;
+      dataLength = 0;
+      capacity = 0;
     }
   }
+
 
 
   /// Copy constructor - handles copying of data buffer
-  RawTile( const RawTile& tile ) {
+  RawTile( const RawTile& tile )
+    : filename( tile.filename ),
+      width( tile.width ),
+      height( tile.height ),
+      channels( tile.channels ),
+      bpc( tile.bpc ),
+      sampleType( tile.sampleType ),
+      compressionType( tile.compressionType ),
+      quality( tile.quality ),
+      timestamp( tile.timestamp ),
+      tileNum( tile.tileNum ),
+      resolution( tile.resolution ),
+      hSequence( tile.hSequence ),
+      vSequence( tile.vSequence ),
+      padded( tile.padded ),
+      capacity( tile.capacity ),
+      dataLength( tile.dataLength ),
+      memoryManaged( tile.memoryManaged ),
+      data( NULL )
+  {
 
-    tileNum = tile.tileNum;
-    resolution = tile.resolution;
-    hSequence = tile.hSequence;
-    vSequence = tile.vSequence;
-    compressionType = tile.compressionType;
-    quality = tile.quality;
-    filename = tile.filename;
-    timestamp = tile.timestamp;
-    memoryManaged = tile.memoryManaged;
-    dataLength = tile.dataLength;
-    width = tile.width;
-    height = tile.height;
-    channels = tile.channels;
-    bpc = tile.bpc;
-    sampleType = tile.sampleType;
-    padded = tile.padded;
-
-    switch( bpc ){
-      case 32:
-	if( sampleType == FLOATINGPOINT ) data = new float[dataLength/4];
-	else data = new unsigned int[dataLength/4];
-	break;
-      case 16:
-	data = new unsigned short[dataLength/2];
-	break;
-      default:
-	data = new unsigned char[dataLength];
-	break;
-    }
-
-    if( data && (dataLength > 0) && tile.data ){
-      memcpy( data, tile.data, dataLength );
+    if( tile.data && tile.dataLength > 0 ){
+      allocate();
+      memcpy( data, tile.data, tile.dataLength );
       memoryManaged = 1;
     }
+
   }
+
 
 
   /// Copy assignment constructor
   RawTile& operator= ( const RawTile& tile ) {
 
-    tileNum = tile.tileNum;
-    resolution = tile.resolution;
-    hSequence = tile.hSequence;
-    vSequence = tile.vSequence;
-    compressionType = tile.compressionType;
-    quality = tile.quality;
-    filename = tile.filename;
-    timestamp = tile.timestamp;
-    memoryManaged = tile.memoryManaged;
-    dataLength = tile.dataLength;
-    width = tile.width;
-    height = tile.height;
-    channels = tile.channels;
-    bpc = tile.bpc;
-    sampleType = tile.sampleType;
-    padded = tile.padded;
+    if( this != &tile ){
 
-    switch( bpc ){
-      case 32:
-	if( sampleType == FLOATINGPOINT ) data = new float[dataLength/4];
-	else data = new int[dataLength/4];
-	break;
-      case 16:
-	data = new unsigned short[dataLength/2];
-	break;
-      default:
-	data = new unsigned char[dataLength];
-	break;
-    }
+      tileNum = tile.tileNum;
+      resolution = tile.resolution;
+      hSequence = tile.hSequence;
+      vSequence = tile.vSequence;
+      compressionType = tile.compressionType;
+      quality = tile.quality;
+      filename = tile.filename;
+      timestamp = tile.timestamp;
+      memoryManaged = tile.memoryManaged;
+      dataLength = tile.dataLength;
+      width = tile.width;
+      height = tile.height;
+      channels = tile.channels;
+      bpc = tile.bpc;
+      sampleType = tile.sampleType;
+      padded = tile.padded;
+      capacity = tile.capacity;
 
-    if( data && (dataLength > 0) && tile.data ){
-      memcpy( data, tile.data, dataLength );
-      memoryManaged = 1;
+      if( tile.data && tile.dataLength > 0 ){
+	allocate();
+	memcpy( data, tile.data, tile.dataLength );
+	memoryManaged = 1;
+      }
     }
 
     return *this;
   }
 
 
-  /// Return the size of the data
-  unsigned int size() const { return dataLength; }
+
+  /// Allocate memory for the tile
+  /** @param size size in bytes to allocate
+   */
+  void allocate( uint32_t size = 0 ) {
+
+    if( size == 0 ) size = (uint32_t) width * height * channels * (bpc/8);
+
+    switch( bpc ){
+      case 32:
+	if( sampleType == FLOATINGPOINT ) data = new float[size/4];
+	else data = new int[size/4];
+	break;
+      case 16:
+	data = new unsigned short[size/2];
+	break;
+      default:
+	data = new unsigned char[size];
+	break;
+    }
+    memoryManaged = 1;
+    capacity = size;
+  };
+
 
 
   /// Overloaded equality operator
@@ -243,6 +268,7 @@ class RawTile{
   }
 
 
+
   /// Overloaded non-equality operator
   friend int operator != ( const RawTile& A, const RawTile& B ) {
     if( (A.tileNum == B.tileNum) &&
@@ -258,7 +284,102 @@ class RawTile{
   }
 
 
-};
 
+  // Memory efficient move operators possible in C++11 onwards
+#if (__cplusplus >= 201103L) || ((defined(_MSC_VER) && _MSC_VER >= 1900))
+
+  /// Move constructor
+  RawTile( RawTile&& tile ) noexcept
+    : filename( tile.filename ),
+      width( tile.width ),
+      height( tile.height ),
+      channels( tile.channels ),
+      bpc( tile.bpc ),
+      sampleType( tile.sampleType ),
+      compressionType( tile.compressionType ),
+      quality( tile.quality ),
+      timestamp( tile.timestamp ),
+      tileNum( tile.tileNum ),
+      resolution( tile.resolution ),
+      hSequence( tile.hSequence ),
+      vSequence( tile.vSequence ),
+      padded( tile.padded ),
+      capacity( tile.capacity ),
+      dataLength( tile.dataLength ),
+      memoryManaged( tile.memoryManaged ),
+      data( NULL )
+  {
+
+    if( tile.memoryManaged == 1 ){
+
+      // Transfer ownership of data
+      data = tile.data;
+
+      // Free data from other RawTile
+      tile.data = nullptr;
+      tile.dataLength = 0;
+      tile.capacity = 0;
+      tile.memoryManaged = 0;
+    }
+    // Need to copy data if other tile is not owner of its data
+    else if( tile.data && dataLength>0 ){
+      allocate();
+      memcpy( data, tile.data, tile.dataLength );
+      memoryManaged = 1;
+    }
+  }
+
+
+
+  /// Move assignment operator
+  RawTile& operator= ( RawTile&& tile ) noexcept {
+
+    if( this != &tile ){
+
+      if( data && dataLength>0 ) delete this;
+
+      // Use move for std::string. The other fields are of basic type
+      filename = std::move( tile.filename );
+      tileNum = tile.tileNum;
+      resolution = tile.resolution;
+      hSequence = tile.hSequence;
+      vSequence = tile.vSequence;
+      compressionType = tile.compressionType;
+      quality = tile.quality;
+      timestamp = tile.timestamp;
+      memoryManaged = tile.memoryManaged;
+      capacity = tile.capacity;
+      dataLength = tile.dataLength;
+      width = tile.width;
+      height = tile.height;
+      channels = tile.channels;
+      bpc = tile.bpc;
+      sampleType = tile.sampleType;
+      padded = tile.padded;
+
+      if( tile.memoryManaged == 1 ){
+
+	// Transfer ownership of raw data
+	data = tile.data;
+
+	// Free data from other tile
+	tile.data = nullptr;
+	tile.dataLength = 0;
+	tile.capacity = 0;
+	tile.memoryManaged = 0;
+      }
+      else if( tile.data && tile.dataLength>0 ){
+	allocate();
+	memcpy( data, tile.data, tile.dataLength );
+	memoryManaged = 1;
+      }
+    }
+
+    return *this;
+  }
+
+#endif
+
+};
 
 #endif
